--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -49,25 +49,26 @@
     <TypeScriptCompile Include="src\hsTest\Defs.ts" />
     <TypeScriptCompile Include="src\hsTest\DrawTest.ts" />
     <TypeScriptCompile Include="src\hsTest\SelectorTest.ts" />
-    <TypeScriptCompile Include="src\hs\entities\CardSet.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\DefActions.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\IDefActionFactory.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\IDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\ICard.ts" />
+    <TypeScriptCompile Include="src\hs\entity\CardSet.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\action\DefActions.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\target\DefTarget.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\IDefActionFactory.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\action\IDefAction.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\entity\ICard.ts" />
     <TypeScriptCompile Include="src\hs\core\HsAction.ts" />
     <TypeScriptCompile Include="src\hs\core\HsGameContext.ts" />
     <TypeScriptCompile Include="src\hs\core\HsEntity.ts" />
     <TypeScriptCompile Include="src\hs\core\HsCounter.ts" />
     <TypeScriptCompile Include="src\hs\core\HsMarker.ts" />
     <TypeScriptCompile Include="src\hs\core\HsZone.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\IHsEntity.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\IMinion.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\ITargetChoiceMode.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\ITarget.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\IWeapon.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\ISpell.ts" />
-    <TypeScriptCompile Include="src\hs\entities\def\IPlayer.ts" />
-    <TypeScriptCompile Include="src\hs\entities\Player.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\entity\IHsEntity.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\entity\IMinion.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\target\ITargetChoiceMode.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\target\DefTargetSetBuilder.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\entity\IWeapon.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\entity\ISpell.ts" />
+    <TypeScriptCompile Include="src\hs\entity\def\entity\IPlayer.ts" />
+    <TypeScriptCompile Include="src\hs\entity\Player.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
     <TypeScriptCompile Include="src\hs\helpers\Target.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
@@ -94,7 +95,7 @@
     <TypeScriptCompile Include="src\hs\hsActions\ReturnCardIntoHandFromPlayZone.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\ShuffleDeck.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\ShuffleGeneratedCardIntoDeck.ts" />
-    <TypeScriptCompile Include="src\hs\entities\Card.ts" />
+    <TypeScriptCompile Include="src\hs\entity\Card.ts" />
     <TypeScriptCompile Include="src\core\ZoneExceptions.ts" />
     <TypeScriptCompile Include="src\hs\trigger\OnAfterCardDrawTrigger.ts" />
     <TypeScriptCompile Include="src\hs\trigger\OnAfterDamageTrigger.ts" />
