--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -43,18 +43,16 @@
     <TypeScriptCompile Include="src\core\action\IActionContext.ts" />
     <TypeScriptCompile Include="src\core\Zone.ts" />
     <TypeScriptCompile Include="src\core\Marker.ts" />
-    <TypeScriptCompile Include="src\hsTest\Defs.ts" />
     <TypeScriptCompile Include="src\hsTest\DrawTest.ts" />
-    <TypeScriptCompile Include="src\hsTest\SelectorTest.ts" />
     <TypeScriptCompile Include="src\hs\Const.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\IEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\IFlags.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\ITriggers.ts" />
-    <TypeScriptCompile Include="src\hs\entity\CardSet.ts" />
-    <TypeScriptCompile Include="src\hs\def\action\DirectDamage.ts" />
-    <TypeScriptCompile Include="src\hs\def\target\chooseAction\ChooseAtRandomAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\target\DefTargetHelper.ts" />
     <TypeScriptCompile Include="src\hs\def\target\DefTarget.ts" />
-    <TypeScriptCompile Include="src\hs\def\target\chooseAction\ChooseAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\IDefActionFactory.ts" />
+    <TypeScriptCompile Include="src\hs\def\target\filters\MinionByAtackFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\target\filters\StandardFilters.ts" />
+    <TypeScriptCompile Include="src\hs\entity\CardSet.ts" />
     <TypeScriptCompile Include="src\hs\def\action\IDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\ICard.ts" />
     <TypeScriptCompile Include="src\hs\core\HsAction.ts" />
@@ -65,12 +63,9 @@
     <TypeScriptCompile Include="src\hs\core\HsZone.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\IHsEntity.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\IMinion.ts" />
-    <TypeScriptCompile Include="src\hs\def\target\builder\DefTargetSetBuilder.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\IWeapon.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\ISpell.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\IPlayer.ts" />
-    <TypeScriptCompile Include="src\hs\def\target\target\ArcaneMissileDefTarget.ts" />
-    <TypeScriptCompile Include="src\hs\entity\Fatigue.ts" />
     <TypeScriptCompile Include="src\hs\entity\Player.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEnchantmentActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsDamageActionFactory.ts" />
@@ -85,6 +80,7 @@
     <TypeScriptCompile Include="src\hs\hsActions\Heal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\main\PayCostAndRemoveFromHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\main\AcquireTargets.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\ChooseAtRandomAction.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTriggers.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTargetedTrigger.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTargetlessTrigger.ts" />
