--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -22,107 +22,113 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="src\commons\ClassUtils.ts" />
-    <TypeScriptCompile Include="src\commons\Collection.ts" />
-    <TypeScriptCompile Include="src\commons\MathUtils.ts" />
-    <TypeScriptCompile Include="src\commons\StringUtils.ts" />
-    <TypeScriptCompile Include="src\core\action\ActionFactory.ts" />
-    <TypeScriptCompile Include="src\core\action\ActionStack.ts" />
-    <TypeScriptCompile Include="src\core\action\abstractActions\BroadcastableAction.ts" />
-    <TypeScriptCompile Include="src\core\action\abstractActions\CancelableAction.ts" />
-    <TypeScriptCompile Include="src\core\action\helperActions\DispatchEventAction.ts" />
-    <TypeScriptCompile Include="src\core\action\helperActions\MoveEntityBetweenZones.ts" />
-    <TypeScriptCompile Include="src\core\action\helperActions\Selector.ts" />
-    <TypeScriptCompile Include="src\core\action\IAction.ts" />
-    <TypeScriptCompile Include="src\core\Counter.ts" />
-    <TypeScriptCompile Include="src\core\Entity.ts" />
-    <TypeScriptCompile Include="src\core\event\Event.ts" />
-    <TypeScriptCompile Include="src\core\event\EventHandler.ts" />
-    <TypeScriptCompile Include="src\core\event\EventHandlers.ts" />
-    <TypeScriptCompile Include="src\core\action\IActionContext.ts" />
-    <TypeScriptCompile Include="src\core\Zone.ts" />
-    <TypeScriptCompile Include="src\core\Marker.ts" />
-    <TypeScriptCompile Include="src\hsTest\DrawTest.ts" />
-    <TypeScriptCompile Include="src\hs\Const.ts" />
-    <TypeScriptCompile Include="src\hs\def\action\AllTargetsDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\action\SingleTargetDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\action\TwoStepsTargetsDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\Const.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IEnchantment.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IFlags.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\ITriggers.ts" />
-    <TypeScriptCompile Include="src\hs\def\helpers\DealDirectDamage.ts" />
-    <TypeScriptCompile Include="src\hs\def\target\DefTargetHelper.ts" />
-    <TypeScriptCompile Include="src\hs\def\target\DefTarget.ts" />
-    <TypeScriptCompile Include="src\hs\def\target\filters\EntityFilter.ts" />
-    <TypeScriptCompile Include="src\hs\def\target\filters\MinionByAtackFilter.ts" />
-    <TypeScriptCompile Include="src\hs\def\target\filters\StandardFilters.ts" />
-    <TypeScriptCompile Include="src\hs\entity\CardSet.ts" />
-    <TypeScriptCompile Include="src\hs\def\action\IDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\ICard.ts" />
-    <TypeScriptCompile Include="src\hs\core\HsAction.ts" />
-    <TypeScriptCompile Include="src\hs\core\HsGameContext.ts" />
-    <TypeScriptCompile Include="src\hs\entity\HsEntity.ts" />
-    <TypeScriptCompile Include="src\hs\core\HsCounter.ts" />
-    <TypeScriptCompile Include="src\hs\core\HsMarker.ts" />
-    <TypeScriptCompile Include="src\hs\core\HsZone.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IHsEntity.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IMinion.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IWeapon.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\ISpell.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IPlayer.ts" />
-    <TypeScriptCompile Include="src\hs\entity\Player.ts" />
-    <TypeScriptCompile Include="src\hs\factories\HsEnchantmentActionFactory.ts" />
-    <TypeScriptCompile Include="src\hs\factories\HsDamageActionFactory.ts" />
-    <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
-    <TypeScriptCompile Include="src\hs\factories\MakeChoiceActionFactory.ts" />
-    <TypeScriptCompile Include="src\hs\helpers\Target.ts" />
-    <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\AddGeneratedCardIntoHand.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\DestroyCardInPlay.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\Discard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\Heal.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PayCostAndRemoveFromHand.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\AcquireTargets.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\makeChoice\ChooseSingleTarget.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\makeChoice\MakeChoiceAtRandom.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\AuraUpdateStep.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\Battlecry.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\DeathCreationStep.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\SummonResolutionStep.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\SilenceAMinion.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTriggers.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTargetedTrigger.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTargetlessTrigger.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayWeapon.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlaySpell.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayMinion.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayCard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\param\BasicParams.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\EquippingPhase.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\Sequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\Damage.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\DrawCard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\EmptyAction.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\Fatigue.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\MillCard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PutCardIntoHand.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\ReturnCardIntoHandFromPlayZone.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\ShuffleDeck.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\ShuffleGeneratedCardIntoDeck.ts" />
-    <TypeScriptCompile Include="src\hs\entity\Card.ts" />
-    <TypeScriptCompile Include="src\core\ZoneExceptions.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\helper\Arcane_MissileAction.ts" />
-    <TypeScriptCompile Include="src\hs\trigger\OnAfterCardDrawTrigger.ts" />
-    <TypeScriptCompile Include="src\hs\trigger\OnAfterDamageTrigger.ts" />
-    <TypeScriptCompile Include="src\hs\trigger\OnDamageCalculationTrigger.ts" />
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="src\hs\event\" />
     <Folder Include="src\hs\hsActions\main\" />
     <Folder Include="src\hs\hsActions\minor\" />
     <Folder Include="src\hs\hsActions\phase\" />
     <Folder Include="src\hs\technical\" />
+  </ItemGroup>
+  <ItemGroup>
+    <TypeScriptCompile Include="src\commons\ClassUtils.ts" />
+    <TypeScriptCompile Include="src\commons\Collection.ts" />
+    <TypeScriptCompile Include="src\commons\MathUtils.ts" />
+    <TypeScriptCompile Include="src\commons\StringUtils.ts" />
+    <TypeScriptCompile Include="src\core\action\abstractActions\BroadcastableAction.ts" />
+    <TypeScriptCompile Include="src\core\action\abstractActions\CancelableAction.ts" />
+    <TypeScriptCompile Include="src\core\action\ActionFactory.ts" />
+    <TypeScriptCompile Include="src\core\action\ActionStack.ts" />
+    <TypeScriptCompile Include="src\core\action\helperActions\DispatchEventAction.ts" />
+    <TypeScriptCompile Include="src\core\action\helperActions\MoveEntityBetweenZones.ts" />
+    <TypeScriptCompile Include="src\core\action\helperActions\Selector.ts" />
+    <TypeScriptCompile Include="src\core\action\IAction.ts" />
+    <TypeScriptCompile Include="src\core\action\IActionContext.ts" />
+    <TypeScriptCompile Include="src\core\Counter.ts" />
+    <TypeScriptCompile Include="src\core\Entity.ts" />
+    <TypeScriptCompile Include="src\core\event\Event.ts" />
+    <TypeScriptCompile Include="src\core\event\EventHandler.ts" />
+    <TypeScriptCompile Include="src\core\event\EventHandlers.ts" />
+    <TypeScriptCompile Include="src\core\Marker.ts" />
+    <TypeScriptCompile Include="src\core\Zone.ts" />
+    <TypeScriptCompile Include="src\core\ZoneExceptions.ts" />
+    <TypeScriptCompile Include="src\hsTest\DrawTest.ts" />
+    <TypeScriptCompile Include="src\hs\Const.ts" />
+    <TypeScriptCompile Include="src\hs\core\HsAction.ts" />
+    <TypeScriptCompile Include="src\hs\core\HsCounter.ts" />
+    <TypeScriptCompile Include="src\hs\core\HsGameContext.ts" />
+    <TypeScriptCompile Include="src\hs\core\HsMarker.ts" />
+    <TypeScriptCompile Include="src\hs\core\HsZone.ts" />
+    <TypeScriptCompile Include="src\hs\def\action\AllTargetsDefAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\action\IDefAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\action\SingleTargetDefAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\action\TwoStepsTargetsDefAction.ts" />
+    <TypeScriptCompile Include="src\hs\def\Const.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\ICard.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\IEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\IFlags.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\IHsEntity.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\IMinion.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\IPlayer.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\ISpell.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\IWeapon.ts" />
+    <TypeScriptCompile Include="src\hs\def\helpers\DealDirectDamage.ts" />
+    <TypeScriptCompile Include="src\hs\def\setBuilder\builders\EntitySetBuilder.ts" />
+    <TypeScriptCompile Include="src\hs\def\setBuilder\builders\TriggerSetBuilder.ts" />
+    <TypeScriptCompile Include="src\hs\def\setBuilder\DefSetBuilder.ts" />
+    <TypeScriptCompile Include="src\hs\def\setBuilder\SetBuilderHelper.ts" />
+    <TypeScriptCompile Include="src\hs\def\setBuilder\filters\TriggerFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\setBuilder\filters\EntityFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\setBuilder\filters\MinionByAtackFilter.ts" />
+    <TypeScriptCompile Include="src\hs\def\setBuilder\filters\StandardFilters.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\IDefTrigger.ts" />
+    <TypeScriptCompile Include="src\hs\entity\Card.ts" />
+    <TypeScriptCompile Include="src\hs\entity\CardSet.ts" />
+    <TypeScriptCompile Include="src\hs\entity\HsEntity.ts" />
+    <TypeScriptCompile Include="src\hs\entity\Player.ts" />
+    <TypeScriptCompile Include="src\hs\entity\Trigger.ts" />
+    <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
+    <TypeScriptCompile Include="src\hs\factories\HsDamageActionFactory.ts" />
+    <TypeScriptCompile Include="src\hs\factories\HsEnchantmentActionFactory.ts" />
+    <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
+    <TypeScriptCompile Include="src\hs\factories\MakeChoiceActionFactory.ts" />
+    <TypeScriptCompile Include="src\hs\helpers\Target.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\AddGeneratedCardIntoHand.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\Damage.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\DestroyCardInPlay.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\Discard.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\DrawCard.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\EmptyAction.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\Heal.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\helper\Arcane_MissileAction.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\makeChoice\ChooseSingleTarget.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\makeChoice\MakeChoiceAtRandom.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\MarkAsDestroyed.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\MillCard.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\param\BasicParams.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\AcquireTargets.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\EquippingPhase.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PayCostAndRemoveFromHand.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayCard.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayMinion.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlaySpell.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayWeapon.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\AuraUpdateStep.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\Battlecry.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\DeathCreationStep.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\DispatchEvent.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\SummonResolutionStep.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\PutCardIntoHand.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\ReturnCardIntoHandFromPlayZone.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\Sequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\ShuffleDeck.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\ShuffleGeneratedCardIntoDeck.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\SilenceAMinion.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTargetedTrigger.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTargetlessTrigger.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\ExecuteTriggers.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\Fatigue.ts" />
+    <TypeScriptCompile Include="src\hs\trigger\OnAfterCardDrawTrigger.ts" />
+    <TypeScriptCompile Include="src\hs\trigger\OnAfterDamageTrigger.ts" />
+    <TypeScriptCompile Include="src\hs\trigger\OnDamageCalculationTrigger.ts" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
