--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -22,11 +22,9 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="src\hs\helpers\" />
     <Folder Include="src\hs\hsActions\main\" />
     <Folder Include="src\hs\hsActions\minor\" />
     <Folder Include="src\hs\hsActions\phase\" />
-    <Folder Include="src\hs\technical\" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="src\commons\ClassUtils.ts" />
@@ -54,8 +52,8 @@
     <TypeScriptCompile Include="src\hs\def\action\TwoStepsTargetsDefAction.ts" />
     <TypeScriptCompile Include="src\hs\def\Const.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\ICard.ts" />
-    <TypeScriptCompile Include="src\hs\def\entity\IDefTrigger.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\IDefEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\def\entity\IDefTrigger.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\IFlags.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\IHsEntity.ts" />
     <TypeScriptCompile Include="src\hs\def\entity\IMinion.ts" />
@@ -74,10 +72,10 @@
     <TypeScriptCompile Include="src\hs\def\setBuilder\SetBuilderHelper.ts" />
     <TypeScriptCompile Include="src\hs\entity\Card.ts" />
     <TypeScriptCompile Include="src\hs\entity\CardSet.ts" />
-    <TypeScriptCompile Include="src\hs\entity\Minion.ts" />
-    <TypeScriptCompile Include="src\hs\entity\PermanentState\PermanentStateChange.ts" />
     <TypeScriptCompile Include="src\hs\entity\HsEntity.ts" />
+    <TypeScriptCompile Include="src\hs\entity\Minion.ts" />
     <TypeScriptCompile Include="src\hs\entity\PermanentState\PermanentStateCalculator.ts" />
+    <TypeScriptCompile Include="src\hs\entity\PermanentState\PermanentStateChange.ts" />
     <TypeScriptCompile Include="src\hs\entity\Player.ts" />
     <TypeScriptCompile Include="src\hs\entity\Spell.ts" />
     <TypeScriptCompile Include="src\hs\entity\Trigger.ts" />
@@ -88,20 +86,23 @@
     <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\MakeChoiceActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\AddGeneratedCardIntoHand.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\Damage.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\event\SaveEvent.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\new\Damage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\DestroyCardInPlay.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\Discard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\DrawCard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\EmptyAction.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\Heal.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\new\Heal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\helper\Arcane_MissileAction.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\makeChoice\ChooseSingleTarget.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\makeChoice\MakeChoiceAtRandom.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\MarkAsDestroyed.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\MillCard.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\new\Damage2.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\new\HealDamageCalc.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\param\BasicParams.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\AcquireTargets.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\DispatchEvent.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\event\DispatchEvent.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\EquippingPhase.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PayCostAndRemoveFromHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayCard.ts" />
